// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Popover component overrides: custom popover arrow has correct props 1`] = `
Object {
  "$arrowStyles": Object {
    "left": "0px",
    "top": "0px",
  },
  "$isAnimating": false,
  "$isOpen": true,
  "$placement": "auto",
  "$positionStyles": Object {
    "left": "0px",
    "top": "0px",
  },
  "$ref": Object {
    "current": null,
  },
  "$showArrow": true,
}
`;

exports[`Popover component overrides: custom popover body has correct props 1`] = `
Object {
  "$arrowStyles": Object {
    "left": "0px",
    "top": "0px",
  },
  "$isAnimating": false,
  "$isOpen": true,
  "$placement": "auto",
  "$positionStyles": Object {
    "left": "0px",
    "top": "0px",
  },
  "$ref": Object {
    "current": null,
  },
  "$showArrow": true,
  "id": null,
  "onMouseEnter": [Function],
  "onMouseLeave": [Function],
}
`;

exports[`Popover component overrides: custom popover inner has correct props 1`] = `
Object {
  "$arrowStyles": Object {
    "left": "0px",
    "top": "0px",
  },
  "$isAnimating": false,
  "$isOpen": true,
  "$placement": "auto",
  "$positionStyles": Object {
    "left": "0px",
    "top": "0px",
  },
  "$showArrow": true,
}
`;
